# test-project-ci-cd

./: .dockerignore  .gitignore  Containerfile  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: default.yml  deploy.yml  dev.yml  main.yml  pr.yml  test-container.yml  test-pypi.yml  test.yml
src/test_project_ci_cd/: __init__.py  calc.py
tests/: test_init.py  test_main.py  test_project.py
