[tool.poetry]
name = "test-project-ci-cd"
version = "0.1.10"
description = "test project for github actions"
authors = ["Daryl Stark <daryl@dstark.nl>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "test_project_ci_cd", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.10.14"
fastapi = "0.110.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"
bumpver = "^2023.1129"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.10"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "Version {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"sonar-project.properties" = [
    'sonar.projectVersion={version}'
]

[tool.pytest.ini_options]
addopts = ['--cov=test_project_ci_cd', '--cov-report=html', '--cov-report=lcov', '--cov-report=xml']

[tool.coverage.run]
relative_files = true